samples/_failures_safe/1761282337_0a7319_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c45b570.c:160: error: expected ‘;’, ‘,’ or ‘)’ at end of input
